<resources>
    <string name="app_name">Injection Room</string>
    <string name="select_task">Select Task</string>
    <string name="intradermal" translatable="false">Intradermal</string>
    <string name="intramuscular" translatable="false">Intramuscular</string>
    <string name="subcutaneous" translatable="false">Subcutaneous</string>
    <string name="task_intradermal_0" translatable="false">Vaccine PVRV 0.1 ml ID</string>
    <string name="task_intramus_0" translatable="false">DMPA 150 mg IM</string>
    <string name="task_sub_0" translatable="false">Regular insulin 10 IU S.C q 4 hr</string>
    <string name="start_task">Start task</string>
    <string name="select_eqp">Select Equipment</string>
    <string name="select_syringe">Select syringe</string>
    <string name="select_needle_size">Select needle size</string>
    <string name="select_drug">Select drug</string>
    <string name="no_21">No. 21</string>
    <string name="no_24">No. 24</string>
    <string name="no_27">No. 27</string>
    <string name="tenR">10 R</string>
    <string name="information">Information</string>
    <string name="play_game">Play game</string>
    <string name="ten_r_title">10 R’s in Giving Medication</string>
    <string name="ten_r_1">1. Right Drug</string>
    <string name="ten_r_2">2. Right Dose</string>
    <string name="ten_r_3">3. Right Route</string>
    <string name="ten_r_4">4. Right Time and Frequency</string>
    <string name="ten_r_5">5. Right Patient</string>
    <string name="ten_r_6">6. Right History and Assessment</string>
    <string name="ten_r_7">7. Right Drug-Drug Interaction and Evaluation</string>
    <string name="ten_r_8">8. Right Approach and Right Refuse</string>
    <string name="ten_r_9">9. Right Education and Information</string>
    <string name="ten_r_10">10. Right Documentation</string>
    <string name="detail_ten_r_1">\t\t\t\tCheck medication, medication administration record and doctor’s order.</string>
    <string name="detail_ten_r_2">\t\t\t\tCheck dose and medication administration record correctly. If you get confused on the dosage, ask first. Consult with the ordering physician.</string>
    <string name="detail_ten_r_3">\t\t\t\tCheck the route of drugs that appropriate and safety way for patient.</string>
    <string name="detail_ten_r_4">\t\t\t\tCheck Time and Frequency in medication administration record.</string>
    <string name="detail_ten_r_5">\t\t\t\tCheck patient’s name correctly (medication, doctor’s order and patient) before you administer and while you administer.</string>
    <string name="detail_ten_r_6">\t\t\t\tCheck the allergic patient’s history records and skin testing before administering it. Especially Anti-biotic.</string>
    <string name="detail_ten_r_7">\t\t\t\tCheck the medicine’s interaction with other drugs, and drugs with foods that affect to effective treatment.</string>
    <string name="detail_ten_r_8">\t\t\t\tBefore you administer, please explain about patient’s right, benefit and side effects of drug. The patient can refuse or accept it.</string>
    <string name="detail_ten_r_9">\t\t\t\tExplain to patient about their drugs and observe side effects of drugs.</string>
    <string name="detail_ten_r_10">\t\t\t\tCheck document, sign your name and record nurse’s note correctly.</string>
    <string name="ten_r_ref">Reference Liane Clores, 10 R’s in Giving Medication, nursingcrib.com</string>
    <string name="intradermal_type">Intradermal injection, ID</string>
    <string name="intradermal_info">ฉีดเข้าไปในชั้นหนังแท้ซึ่งอยู่ใต้ชั้นหนังกำพร้า ปริมาณยาที่ฉีดไม่เกิน 0.3 มล.</string>
    <string-array name="intradermal_purpose">
        <item>-วินิจฉัยโรคโดยการทดสอบผิวหนัง (Skin testing)</item>
        <item>-ทดสอบภูมิแพ้</item>
        <item>-ให้ภูมิคุ้มกันโรค</item>
        <item>-ฉีดยาเฉพาะที่</item>
    </string-array>
    <string name="intradermal_syringe_size">เบอร์/No. 25, 26 หรือ 27</string>
    <string name="intradermal_syringe_length">ความยาวเข็ม 1/2 นิ้ว</string>
    <string name="intradermal_position">ฉีดผิวหนังที่บาง ไม่มีขน หรือมี Keratin ที่น้อย เช่น แขนท่อนปลายด้านใน และหลังส่วนบน</string>
    <string-array name="intradermal_step">
        <item>1.ตรวจสอบความถูกต้องตามหลัก10R</item>
        <item>2.จัดให้ผู้ป่วยอยู่ในท่าที่สุขสบาย และสะดวกต่อการฉีดยา</item>
        <item>3.ล้างมือให้สะอาด และสวมถุงมือ</item>
        <item>4.เตรียมยา ไล่อากาศในกระบอกฉีดยา</item>
        <item>5.ประเมินตำแหน่งที่ฉีด โดยฉีดผิวหนังที่บาง ไม่มีขน หรือมี Keratin ที่น้อย เช่น แขนท่อนปลายด้านในและหลังส่วนบน</item>
        <item>6.ทำความสะอาดผิวหนังด้วย 70% แอลกอฮอล์</item>
        <item>7.ดึงปลอกเข็มออก โดยใช้มอข้างที่ถนัดจับเข็ม ให้ปลายตัดของเข็มหงายขึ้น</item>
        <item>8.แทงเข็มทำมุม 5-15 องศากับผิวหนังเข้าไปลึกประมาณ 2-3 มม. และจับ syringe ให้นิ่ง</item>
        <item>9.ดันยาจนมองเห็นตุ่มนูนเล็กๆ เส้นผ่านศูนย์กลางประมาณ 6 มม. **ถ้าไม่มีตุ่มนูนให้ถอยเข็มเล็กน้อย แต่ไม่ให้เข็มหลุดออกจากผิวหนัง แล้วดันเข้าใหม่ ให้ถูกตำแหน่ง(ถ้าไม่มีตุ่มนูนขึ้น ให้ถอนเข็มออกเล็กน้อย)</item>
        <item>10.ฉีดเสร็จวางสำลีแห้งบนผิวหนังที่ฉีด ดึงเข็มฉีดยาออก</item>
        <item>11.วางขณะดึงเข็มออก ไม่กด ไม่คลึง แค่เช็ดเบาๆ</item>
        <item>12.เก็บอุปกรณ์ และบันทึกหลังการให้ยา</item>
    </string-array>
    <string name="subcutaneous_type">Subcutaneous or hypodermic injection</string>
    <string name="subcutaneous_info">ฉีดเข้าไปในชั้นกล้ามเนื้อ ฉีดปริมาณ 2-5 มล.</string>
    <string-array name="subcutaneous_purpose">
        <item>-ฉีดยาที่ระคายเคืองต่อผิวหนังชั้น Subcutaneous หรือฉีดยาที่เหนียวข้น ดูดซึมยาก</item>
        <item>-ให้ยาแก่ผู้ป่วยที่ไม่สามารถรับประทานยาได้</item>
    </string-array>
    <string name="subcutaneous_syringe_size">เบอร์/No. 24, 25 หรือ 26</string>
    <string name="subcutaneous_syringe_length">ความยาวเข็ม 1/2 - 5/8 นิ้ว</string>
    <string-array name="subcutaneous_position">
        <item>-บริเวณต้นแขนด้านนอก (Outer aspect of upper arm)</item>
        <item>-บริเวณหน้าขา (Anterior aspect of the thigh)</item>
        <item>-Umbilical area โดยห่างจากสะดือ 1 นิ้ว</item>
        <item>-บริเวณหลัง</item>
    </string-array>
    <string-array name="subcutaneous_step">
        <item>1.ตรวจสอบความถูกต้องตามหลัก10R</item>
        <item>2.จัดให้ผู้ป่วยอยู่ในท่าที่สุขสบาย และสะดวกต่อการฉีดยา</item>
        <item>3.ล้างมือให้สะอาด และสวมถุงมือ</item>
        <item>4.ประเมินตำแหน่งที่ฉีด บริเวณที่นิยมการฉีดยาเข้าชั้นใต้ผิวหนัง คือ ต้นแขน หน้าขาและหน้าท้อง</item>
        <item>5.ทำความสะอาดผิวหนังด้วย 70% แอลกอฮอล์</item>
        <item>6.ดึงปลอกเข็มออก โดยใช้มอข้างที่ถนัดจับเข็ม ให้ปลายตัดของเข็มหงายขึ้น</item>
        <item>7.ใช้มือข้างที่ไม่ถนัด โดยใช้หัวแม่มือและนิ้วชี้ยกผิวหนังขึ้นสูงประมาณ 1 นิ้ว โดยยกผิวหนังไว้เวลาที่แทงเข็ม</item>
        <item>8.แทงเข็มลงไปอย่างรวดเร็ว โดยทำมุม 45 หรือ 90 องศา</item>
        <item>9.เลื่อนมือข้างที่จับผิวหนังมาจับปลายกระบอกฉีดยา</item>
        <item>10.มืออีกข้างหนึ่งดึงลูกสูบขึ้นเล็กน้อย</item>
        <item>11.ถ้ามีเลือดเข้ามาในกระบอก ให้ดึงเข็มออกแล้วหาตำแหน่งฉีดใหม่</item>
        <item>12.ถ้าไม่มีเลือดให้ดันยาเข้าไปจนหมด</item>
        <item>13.เมื่อฉีดเสร็จวางสำลีบนผิวหนังที่ฉีด ดึงเข็มฉีดยาออก</item>
        <item>14.วางขณะดึงเข็มออก ไม่กด คลึงเบาๆ</item>
        <item>15.เก็บอุปกรณ์ และบันทึกหลังการให้ยา</item>
    </string-array>
    <string name="intramuscular_type">Intramuscular injection</string>
    <string name="intramuscular_info">ฉีดเข้าไปในเนื้อเยื่อซึ่งอยู่ชั้นใต้ผิวหนัง ปริมาณยาที่ฉีดไม่เกิน 2 มล.</string>
    <string-array name="intramuscular_purpose">
        <item>-ให้ยาแก่ผู้ป่วยที่ไม่สามารถรับประทานยาได้</item>
        <item>-ให้ยาบางชนิด เช่น Insulin และ Heparin</item>
    </string-array>
    <string name="intramuscular_syringe_size">เบอร์/No. 21, 22 หรือ 23</string>
    <string name="intramuscular_syringe_length">ความยาวเข็ม 1-2 นิ้ว</string>
    <string-array name="intramuscular_position">
        <item>Dorsal gluteal</item>
        <item>Ventro gluteal</item>
        <item>Deltoid muscle</item>
        <item>Vastus lateralis</item>
    </string-array>
    <string-array name="intramuscular_step">
        <item>1.ตรวจสอบความถูกต้องตามหลัก10R</item>
        <item>2.จัดให้ผู้ป่วยอยู่ในท่าที่สุขสบาย และสะดวกต่อการฉีดยา</item>
        <item>3.ล้างมือให้สะอาด และสวมถุงมือ</item>
        <item>4.ประเมินตำแหน่งที่ฉีด บริเวณที่นิยมฉีด คือ ต้นแขน ต้นขาและสะโพก</item>
        <item>5.ทำความสะอาดผิวหนังด้วย 70% แอลกอฮอล์</item>
        <item>6.ดึงปลอกเข็มออก โดยใช้มอข้างที่ถนัดจับเข็ม ให้ปลายตัดของเข็มหงายขึ้น</item>
        <item>7.ใช้มือข้างที่ไม่ถนัด โดยใช้หัวแม่มือและนิ้วชี้ถ่างผิวหนังให้ตึง</item>
        <item>8.แทงเข็มลงไปอย่างรวดเร็ว โดยทำมุม 45 ในเด็ก /90 องศาในผู้ใหญ่ ความลึก 3/4 - 1 นิ้ว</item>
        <item>9.เลื่อนมือข้างที่จับผิวหนังมาจับปลายกระบอกฉีดยา</item>
        <item>10.มืออีกข้างหนึ่งดึงลูกสูบขึ้นเล็กน้อย</item>
        <item>11.ถ้ามีเลือดเข้ามาในกระบอก ให้ดึงเข็มออกแล้วหาตำแหน่งฉีดใหม่</item>
        <item>12.ถ้าไม่มีเลือดให้ดันยาเข้าไปจนหมด</item>
        <item>13.เมื่อฉีดเสร็จวางสำลีบนผิวหนังที่ฉีด ดึงเข็มฉีดยาออก</item>
        <item>14.กดและคลึงยาบริเวณที่ฉีดเบาๆ</item>
        <item>15.เก็บอุปกรณ์ และบันทึกหลังการให้ยา</item>
    </string-array>
    <string name="z_track">Z-track</string>
    <string name="z_track_info">ตำแหน่งที่นิยมฉีด คือ บริเวณสะโพก</string>
    <string-array name="z_track_step">
        <item>1.ตรวจสอบความถูกต้องตามหลัก10R</item>
        <item>2.จัดให้ผู้ป่วยอยู่ในท่าที่สุขสบาย และสะดวกต่อการฉีดยา</item>
        <item>3.ล้างมือให้สะอาด และสวมถุงมือ</item>
        <item>4.ประเมินตำแหน่งที่ฉีด ตำแหน่งที่นิยมฉีด คือ บริเวณสะโพก</item>
        <item>5.ทำความสะอาดผิวหนังด้วย 70% แอลกอฮอล์</item>
        <item>6.ดึงปลอกเข็มออก โดยใช้มอข้างที่ถนัดจับเข็ม ให้ปลายตัดของเข็มหงายขึ้น</item>
        <item>7.ใช้มือข้างที่ไม่ถนัดดึงผิวหนังไปทางด้านข้างและลงมาด้านล่าง 1 นิ้ว จากนั้นวางข้อมือไว้ขณะที่ดึงผิวหนัง แล้วใช้มือข้างที่ถนัดแทงเข็มลงไป</item>
        <item>8.แทงเข็มลงไปอย่างรวดเร็ว โดยทำมุม 90 องศา</item>
        <item>9.เลื่อนมือข้างที่จับผิวหนังมาจับปลายกระบอกฉีดยา</item>
        <item>10.มืออีกข้างหนึ่งดึงลูกสูบขึ้นเล็กน้อย</item>
        <item>11.ถ้ามีเลือดเข้ามาในกระบอก ให้ดึงเข็มออกแล้วหาตำแหน่งฉีดใหม่</item>
        <item>12.ถ้าไม่มีเลือดให้ดันยาเข้าไปจนหมด</item>
        <item>13.เมื่อฉีดเสร็จค้างเข็มไว้ประมาณ 10 วินาที</item>
        <item>14.ปล่อยผิวหนังให้กลับที่เดิม ไม่ต้องคลึงบริเวณที่ฉีดยา</item>
        <item>15.เก็บอุปกรณ์ และบันทึกการให้ยา</item>
    </string-array>
    <string name="intravenous_direct_type">Intravenous medication (Direct)</string>
    <string-array name="intravenous_purpose">
        <item>-ให้ยาออกฤทธิ์เร็ว</item>
        <item>-ให้ยาที่ระคายเคืองต่อผิวหนังชั้น Subcutaneous และ Muscle</item>
        <item>-ต้องการรักษาระดับของยาในกระแสเลือดให้สม่ำเสมอ ยาที่ให้ต้องมีลักษณะเป็นน้ำใส และไม่มีส่วนผสมของน้ำมัน</item>
    </string-array>
    <string name="purpose">Purpose</string>
    <string name="syringe_type">Syringe Type</string>
    <string name="position_injecting">Position</string>
    <string name="procedure">Procedure</string>
    <string name="syr_3cc" translatable="false">Syringe 3ml</string>
    <string name="syr_insu" translatable="false">Syringe 1ml</string>
    <string name="dmpa" translatable="false">DMPA</string>
    <string name="pvrv" translatable="false">PVRV</string>
    <string name="insulin" translatable="false">Insulin</string>
    <string name="no_22">No. 22</string>
    <string name="no_23">No. 23</string>
    <string name="no_25">No. 25</string>
    <string name="no_26">No. 26</string>
    <string name="syr_insu_fixed" translatable="false">Syringe Insulin</string>
    <string name="back">Back</string>
</resources>