<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="th.ac.kku.nu.injectionroom.activity.game.SelectEquipment">

    <RelativeLayout
        android:id="@+id/menu_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/back"
            android:id="@+id/ic_back"
            style="@style/backBtn"
            android:layout_margin="3dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/ic_back"
            android:text="@string/select_eqp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/content_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_panel">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card_sel_syringe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="50dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/sel_syringe_title"
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/select_syringe" />

                    <RadioGroup
                        android:id="@+id/syringe_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sel_syringe_title"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/syr3ml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/preview_equp1"
                            android:text="@string/syr_3cc"
                            android:textAlignment="center" />

                        <RadioButton
                            android:id="@+id/syr1ml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/preview_equp2"
                            android:text="@string/syr_insu"
                            android:textAlignment="center" />

                        <RadioButton
                            android:id="@+id/syrInsu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/preview_equp3"
                            android:text="@string/syr_insu_fixed"
                            android:textAlignment="center" />
                    </RadioGroup>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_sel_needle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_sel_syringe"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/select_needle_title"
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/select_needle_size" />

                    <RadioGroup
                        android:id="@+id/needle_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/select_needle_title">

                        <RadioButton
                            android:id="@+id/no27"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_27" />

                        <RadioButton
                            android:id="@+id/no26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_26" />

                        <RadioButton
                            android:id="@+id/no25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_25" />

                        <RadioButton
                            android:id="@+id/no24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_24" />

                        <RadioButton
                            android:id="@+id/no23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_23" />

                        <RadioButton
                            android:id="@+id/no22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_22" />

                        <RadioButton
                            android:id="@+id/no21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_21" />

                    </RadioGroup>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_sel_drug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_sel_needle"
                android:layout_marginBottom="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/select_drug_title"
                        style="@style/TitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/select_drug" />

                    <RadioGroup
                        android:id="@+id/drug_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/select_drug_title">

                        <RadioButton
                            android:id="@+id/dmpa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dmpa" />

                        <RadioButton
                            android:id="@+id/pvrv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pvrv" />

                        <RadioButton
                            android:id="@+id/insulin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/insulin" />
                    </RadioGroup>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/adj_syr_btn"
        style="@style/BigButton.ActionPositive"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="adjust syringe"
        android:textColor="@color/pureWhite" />

</RelativeLayout>
